syntax = "proto3";

package orbis.rabin.v1alpha1;

message EncryptedDeal {
    bytes dhkey = 1;
    bytes signature = 2;
    bytes nonce = 3;
    bytes cipher = 4;
}

message Deal {
    uint32 index = 1;
    EncryptedDeal deal = 2;
}

message Response {
    uint32 index = 1;
    VerifiableResponse Response = 2;
}

message VerifiableResponse {
    bytes sessionID = 1;
    uint32 index = 2;
    bool approved = 3;
    bytes signature = 4;
}